--- a/front/package.json
+++ b/front/package.json
@@ -20,19 +20,15 @@
   "license": "MIT",
   "homepage": "http://grass.business",
   "devDependencies": {
-    "babel-core": "^6.14.0",
-    "babel-loader": "^6.2.10",
-    "babel-preset-es2015": "^6.18.0",
-    "babel-preset-react": "^6.24.1",
-    "copy-webpack-plugin": "^4.0.1",
-    "uglifyjs-webpack-plugin": "0.4.6",
-    "webpack": "^1.13.2",
-    "webpack-dev-server": "^1.15.1",
-    "webpack-glsl-loader": "^1.0.1"
+    "@babel/core": "^7.1.6",
+    "@babel/preset-env": "^7.1.6",
+    "babel-loader": "^8.0.4",
+    "webpack": "^4.26.0",
+    "webpack-cli": "^3.1.2",
+    "webpack-dev-server": "^3.1.10"
   },
   "dependencies": {
     "npm": "^6.4.0",
-    "react-color": "^2.14.1",
     "simplex-noise": "^2.4.0"
   }
 }
